# attdb

./: .gitignore  CODE_REVIEW.txt  DESIGN.md
attentiondb/attentiondb-server/: CMakeLists.txt  Dockerfile.benchmark
attentiondb/attentiondb-server/bench/: bench_engine.cpp  bench_hashmap.cpp  kv_offloading_attentiondb_benchmark.sh
attentiondb/attentiondb-server/bench/config/: attentiondb.yaml  lmcache.yaml
attentiondb/attentiondb-server/python/: attentiondb_py.cpp
attentiondb/attentiondb-server/python/attentiondb/: __init__.py  _util.py  backend.py  lmcache_adapter.py
attentiondb/attentiondb-server/src/: c_api.cpp  c_api.h  c_api_shim.cpp  engine.cpp  engine.h
attentiondb/attentiondb-server/src/admission/: admission.cpp  admission.h
attentiondb/attentiondb-server/src/checkpoint/: checkpoint.cpp  checkpoint.h
attentiondb/attentiondb-server/src/core/: config.cpp  config.h  index_entry.h  status.cpp  status.h  storage_key.h
attentiondb/attentiondb-server/src/eviction/: cw_slru.cpp
attentiondb/attentiondb-server/src/index/: concurrent_hashmap.cpp  concurrent_hashmap.h
attentiondb/attentiondb-server/src/logging/: logger.cpp  logger.h
attentiondb/attentiondb-server/src/memory/: slab_allocator.cpp  slab_allocator.h
attentiondb/attentiondb-server/src/storage/: blob_store.cpp  blob_store.h  io_engine.h  segment.h  uring_engine.cpp  uring_engine.h
attentiondb/attentiondb-server/src/write_buffer/: write_buffer.cpp
attentiondb/attentiondb-server/tests/: test_admission.cpp  test_blob_store.cpp  test_engine.cpp  test_slab.cpp  test_write_buffer.cpp
attentiondb/docs/: PHASE0-MVP.md  PHASE1-SERVER.md
bench/: bench_hashmap.cpp
externalbench/: aerospike_ee_benchmark_2026-04-04.txt  attentiondb_benchmark_2026-04-09.txt  kv_offloading_aerospike_benchmark.sh
python/: attentiondb_py.cpp
python/attentiondb/: backend.py
src/: c_api.h  engine.h
src/checkpoint/: checkpoint.cpp  checkpoint.h
src/core/: config.cpp  config.h  index_entry.h
src/eviction/: cw_slru.h
src/logging/: logger.cpp
src/storage/: blob_store.cpp  gds_engine.h  posix_engine.cpp  posix_engine.h
src/write_buffer/: write_buffer.h
tests/: test_checkpoint.cpp  test_core_types.cpp  test_engine.cpp  test_eviction.cpp  test_hashmap.cpp
